test/functions/vass/main-returns-param.good
main-returns-param.chpl:6: error: 'proc main' cannot return a 'type' or 'param'
